# ru-ufc

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
CHANGELOG/: index.html
changelog.d/: +425d5621.misc.md
docs/: CHANGELOG.md  index.md
search/: search_index.json
src/ru_ufc/: __init__.py
stylesheets/: extra.css
